<resources>
    <string name="app_name">FirebasePhaseOne</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="radio_beauty">Beauty</string>
    <string name="radio_gossiping">Gossiping</string>
    <string name="radio_schoolLife">SchoolLife</string>
    <string name="btn_submit">Submit</string>
    <string name="tag_text">Tag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>